@@ -1,3 +1,8 @@
+Tue May 29 02:10:23 GMT 2012  Olly Betts <olly@survex.com>
+
+	* configure.ac,tests/runsrv.in: In the testsuite, only run remote
+	  servers under valgrind if x87 FP instructions are in use.
+
 Tue May 29 00:24:42 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/: Use the new function attributes on various API
